--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Frontend Mentor | Article preview component</title>
   </head>
   <body>
-    <div class="article-container">
+    <main>
       <div class="img-container col-4">
         <img src="images/drawers.jpg" alt="drawers" />
       </div>
@@ -56,7 +56,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
   </body>
   <script src="index.js"></script>
 </html>
